RESOLVED FIXED105223
Fix repositioning of fixed elements on zooming
https://bugs.webkit.org/show_bug.cgi?id=105223
Summary Fix repositioning of fixed elements on zooming
Simon Fraser (smfr)
Reported 2012-12-17 15:51:02 PST
Fix repositioning of fixed elements on zooming
Attachments
Patch (17.50 KB, patch)
2012-12-17 15:54 PST, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-12-17 15:54:34 PST
Simon Fraser (smfr)
Comment 2 2012-12-17 15:56:26 PST
Simon Fraser (smfr)
Comment 3 2012-12-17 16:28:09 PST
Note You need to log in before you can comment on or make changes to this bug.