Source/WebCore/page/scrolling/mac/ScrollingCoordinatorMac.mm
@@ -128,6 +128,7 @@ void ScrollingCoordinatorMac::frameViewLayoutUpdated(FrameView* frameView)
     scrollParameters.scrollOrigin = frameView->scrollOrigin();
     scrollParameters.viewportRect = IntRect(IntPoint(), frameView->visibleContentRect().size());
     scrollParameters.contentsSize = frameView->contentsSize();
+    scrollParameters.frameScaleFactor = frameView->frame()->frameScaleFactor();
 
     setScrollParametersForNode(scrollParameters, node);
 }
@@ -329,6 +330,8 @@ void ScrollingCoordinatorMac::setScrollParametersForNode(const ScrollParameters&
     node->setScrollOrigin(scrollParameters.scrollOrigin);
     node->setViewportRect(scrollParameters.viewportRect);
     node->setContentsSize(scrollParameters.contentsSize);
+    node->setFrameScaleFactor(scrollParameters.frameScaleFactor);
+
     scheduleTreeStateCommit();
 }
 
